Add getNodeRecordBuckets, addNodeRecord, and deleteNode to DiscoverySystem (#188)
* Add getNodeRecordBuckets, addNodeRecord, and deleteNode to DiscoverySystem

* Update javadoc

* Increase timeout on waits to fix flaky unit test

* Add DiscoverySystem and MutableDiscoverySystem interfaces

* Spotless

* Add license comments

* Adjust build method

* Add some additional deleteNode tests

* spotless

* change deleteNode to deleteNodeRecord

* change deleteNode to deleteNodeRecord